[package]
name = "cheque"
version = "0.2.0"
authors = ["neptunepink <purpleposeidon@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Convenient checked math"
# There doesn't seem to be any appropriate categories here. https://crates.io/category_slugs
homepage = "https://github.com/purpleposeidon/cheque"

[lib]
path = "./lib.rs"

[dependencies]
num-traits = "0.1.*"
